# cga-robotics

./: .gitignore  .gitmodules  CMakeLists.txt  CbotConfig.cmake  README.md
cbot/: CMakeLists.txt  cbotConfig.cmake
cbot/benchmarks/: CMakeLists.txt
cbot/benchmarks/src/: delta_fk.cpp  delta_ik.cpp  serial_fk.cpp  serial_ik.cpp
cbot/examples/: CMakeLists.txt
cbot/examples/src/: delta.cpp  delta_benchmark.cpp  delta_vel.cpp  interpolate.cpp  serial.cpp
cbot/examples/src/cga/: gen.cpp  geometry.cpp
cbot/include/: industrial.h
cbot/include/cbot/: cbot.h  delta.h  industrial.h  robot.h  serial.h  types.h
cbot/src/: cbot.cpp  types.cpp
cbot/src/cga/: delta.cpp
cbot/src/cga_impl/: delta.cpp  serial.cpp
cbot/src/linalg/: delta.cpp
cbot/src/linalg_impl/: delta.cpp  serial.cpp
cga/: CMakeLists.txt
cga/generator/: algebra.py  main.py  mapping.py  operations.py  structs.py  write.py
cga/include/cga/: cga.h  constants.h  geometry.h  transform.h
cga/src/: cga.cpp
cga/test/: CMakeLists.txt
cga/test/src/: gen.cpp  geometry.cpp  transform.cpp
examples/: CMakeLists.txt
examples/src/: conformal.cpp  geometry.cpp  geometry_3d.cpp  kinematics.cpp  structs.cpp  transform.cpp
examples/src/cga/: gen.cpp  kinematics.cpp  transform.cpp
generator/: algebra.py  main.py  mapping.py  operations.py  structs.py  write.py
include/: cga.h  cga_gen.h  geometry.h  kinematics.h  objects.h  transform.h  transformations.h
include/cbot/cbot/cga/: delta.h
include/cbot/cbot/common/: chain.h  delta.h
include/cbot/cbot/linalg/: delta.h
include/cbot/cga/cga/: transform.h
include/cga/: delta.h  geometry.h  kinematics.h  transform.h
include/cga/cga/: geometry.h
include/common/: chain.h  delta.h  industrial.h  robot.h
include/linalg/: delta.h  kinematics.h
src/: cga.cpp  cga_gen.cpp
src/cbot/linalg/: delta.cpp
src/cga/: cga.cpp  delta.cpp
src/linalg/: delta.cpp  kinematics.cpp
tools/: benchmark  build_cga  build_linalg  gen  install  run  test
